# theseedbed

./: .env.example  .gitignore  AGENTS.md  Issue-189-Plan.md  Makefile  README.md
apps/api/: README.md  pyproject.toml
apps/api/alembic/versions/: 0008_cover_provenance.py  0009_library_item_cover_overrides.py  0010_rls_hardening.py  0011_revoke_alembic_privs.py  0011_revoke_alembic_version_privileges.py  0018_library_item_merges.py  (+12 more)
apps/api/app/: main.py
apps/api/scripts/: dev_api_with_bitwarden.py  openlibrary_backfill.py
apps/api/tests/: test_audit.py  test_authors_router.py  test_auto_enrichment_service.py  test_bibliography_models.py  test_books_router.py  test_catalog_service.py  test_config.py  test_content_models.py  test_covers_service.py  test_db_session.py  test_editions_router.py  test_editions_service.py  test_endpoints.py  test_error_handlers.py  test_goodreads_imports_router.py  test_goodreads_imports_service.py  test_goodreads_parser.py  test_google_books_service.py  test_highlights_router.py  test_highlights_service.py  test_images_service.py  test_import_models.py  test_library_by_work_router.py  test_library_merges_service.py  test_library_search_router.py  test_manual_books_service.py  test_manual_covers_service.py  test_me_library_router.py  test_notes_router.py  test_notes_service.py  test_open_library_service.py  test_openlibrary_backfill_service.py  test_rate_limit.py  test_rate_limit_unit.py  test_reading_sessions_service.py  test_reading_statistics_service.py  test_reviews_router.py  test_reviews_service.py  test_rls_policies.py  test_schema_guard.py  (+12 more)
(+280 files in other folders)
